pin versions in CFN template

--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -92,7 +92,7 @@ Mappings:
     ServiceName:
       value: 'metadata-service-v2'
     ImageUrl:
-      value: 'netflixoss/metaflow_metadata_service'
+      value: 'netflixoss/metaflow_metadata_service:v2.2.4'
     ContainerPort:
       value: 8080
     ContainerCpu:
@@ -113,7 +113,7 @@ Mappings:
     ServiceName:
       value: 'metaflow-ui-service'
     ImageUrl:
-      value: 'netflixoss/metaflow_metadata_service'
+      value: 'netflixoss/metaflow_metadata_service:v2.2.4'
     ContainerPort:
       value: 8083
     ContainerCpu:
@@ -134,7 +134,7 @@ Mappings:
     ServiceName:
       value: 'metadata-ui-static'
     ImageUrl:
-      value: 'public.ecr.aws/outerbounds/metaflow_ui:v1.0.1'
+      value: 'public.ecr.aws/outerbounds/metaflow_ui:v1.1.2'
     ContainerPort:
       value: 3000
     ContainerCpu:
