--- a/k8s/helm/metaflow/charts/metaflow-service/Chart.yaml
+++ b/k8s/helm/metaflow/charts/metaflow-service/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-appVersion: 2.1.0
-description: A Helm chart for Kubernetes
+appVersion: 2.2.4
+description: A Helm chart to deploy Metadata Service for Metaflow
 name: metaflow-service
 type: application
-version: 0.1.0
+version: 0.2.0
