tweaks to make it work

--- a/k8s/helm/metaflow/charts/metaflow-ui/templates/static_deployment.yaml
+++ b/k8s/helm/metaflow/charts/metaflow-ui/templates/static_deployment.yaml
@@ -47,6 +47,10 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            - name: METAFLOW_SERVICE
+              value: http://localhost:8083/api
+
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
