--- a/azure/terraform/services/airflow/helm-values.yml
+++ b/azure/terraform/services/airflow/helm-values.yml
@@ -1,10 +1,7 @@
-executor: ${airflow_executor}
+executor: LocalExecutor
 config:
-  scheduler:
-    dag_dir_list_interval: 120
   core:
-    dags_folder: "/dags"
-    dagbag_import_timeout: 300
+    dags_folder: "${airflow_dags_folder}"
 
 defaultAirflowTag: ${airflow_version} 
 
@@ -37,60 +34,3 @@ secret:
 
 
 webserverSecretKey: ${airflow_frenet_secret}
-
-triggerer:
-  extraVolumes:
-    - name: synchronised-dags
-      emptyDir: {}
-  extraVolumeMounts:
-    - name: synchronised-dags
-      mountPath: /dags
-  extraContainers:
-    - name: cloud-sync
-      envFrom:
-        - secretRef:
-            name: ${azure_credentials_secret}
-      image: valayob/cloud-sync:latest
-      imagePullPolicy: Always
-      args: [sync-azure-blobs,https://${azure_account_name}.blob.core.windows.net, ${azure_container_name}, ${dags_sync_prefix},/dags,--frequency, '${dag_sync_frequency}']
-      volumeMounts:
-      - name: synchronised-dags
-        mountPath: /dags
-
-workers:
-  extraVolumes:
-    - name: synchronised-dags
-      emptyDir: {}
-  extraVolumeMounts:
-    - name: synchronised-dags
-      mountPath: /dags
-  extraInitContainers:
-    - name: cloud-sync
-      envFrom:
-        - secretRef:
-            name: ${azure_credentials_secret}
-      image: valayob/cloud-sync:latest
-      imagePullPolicy: Always
-      args: [sync-azure-blobs,https://${azure_account_name}.blob.core.windows.net, ${azure_container_name}, ${dags_sync_prefix},/dags,--only-once]
-      volumeMounts:
-      - name: synchronised-dags
-        mountPath: /dags
-# 
-scheduler:
-  extraVolumes:
-    - name: synchronised-dags
-      emptyDir: {}
-  extraVolumeMounts:
-    - name: synchronised-dags
-      mountPath: /dags
-  extraContainers:
-    - name: cloud-sync
-      envFrom:
-        - secretRef:
-            name: ${azure_credentials_secret}
-      image: valayob/cloud-sync:latest
-      imagePullPolicy: Always
-      args: [sync-azure-blobs,https://${azure_account_name}.blob.core.windows.net, ${azure_container_name}, ${dags_sync_prefix},/dags,--frequency,'${dag_sync_frequency}']
-      volumeMounts:
-      - name: synchronised-dags
-        mountPath: /dags
