--- a/k8s/helm/metaflow/charts/metaflow-service/Chart.yaml
+++ b/k8s/helm/metaflow/charts/metaflow-service/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 2.2.4
+appVersion: v2.3.6
 description: A Helm chart to deploy Metadata Service for Metaflow
 name: metaflow-service
 type: application
