--- a/k8s/helm/metaflow/charts/metaflow-ui/Chart.yaml
+++ b/k8s/helm/metaflow/charts/metaflow-ui/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-appVersion: 2.1.0
+appVersion: v2.3.6
 description: A Helm chart for Kubernetes
 name: metaflow-ui
 type: application
-version: 0.1.0
+version: 0.1.1
