--- a/k8s/helm/metaflow/charts/metaflow-ui/values.yaml
+++ b/k8s/helm/metaflow/charts/metaflow-ui/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: netflixoss/metaflow_metadata_service
+  repository: public.ecr.aws/outerbounds/metaflow_metadata_service
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
