--- a/k8s/helm/metaflow/charts/metaflow-ui/values.yaml
+++ b/k8s/helm/metaflow/charts/metaflow-ui/values.yaml
@@ -13,7 +13,7 @@ image:
 uiImage:
   repository: public.ecr.aws/outerbounds/metaflow_ui
   pullPolicy: IfNotPresent
-  tag: "v1.0.1"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
