--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,7 @@ repos:
     rev: 23.3.0
     hooks:
     -   id: black
+- repo: https://github.com/antonbabenko/pre-commit-terraform
+  rev: v1.80.0
+  hooks:
+    - id: terraform_fmt
