--- a/k8s/helm/metaflow/charts/metaflow-ui/values.yaml
+++ b/k8s/helm/metaflow/charts/metaflow-ui/values.yaml
@@ -1,25 +1,103 @@
-# Default values for metaflow-ui.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+uiBackend:
+  image:
+    name: public.ecr.aws/outerbounds/metaflow_metadata_service
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: ""
 
-replicaCount: 1
+  podAnnotations: {}
 
-image:
-  repository: public.ecr.aws/outerbounds/metaflow_metadata_service
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  env: []
+    # Additional environment variables for metaflow-ui static deployment. Example config:
+    # - name: METAFLOW_SERVICE
+    #   value: "http://localhost:8083/api/"
 
-uiImage:
-  repository: public.ecr.aws/outerbounds/metaflow_ui
-  pullPolicy: IfNotPresent
-  tag: "v1.1.4"
+  envFrom: []
 
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 200m
+    #   memory: 256Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
+
+  service:
+    type: ClusterIP
+    port: 8083
+
+  replicaCount: 1
+
+  metaflowDatastoreSysRootS3: ""
+    # The root S3 bucket prefix that will be used by metaflow
+  
+  metaflowServiceURL: "http://localhost:8083/api/metadata"
+    # The metaflow metadata service URL 
+
+  metaflowS3EndpointURL: ""
+    # This should be set only when using an S3 compatible object storage like minio
+
+  metadatadb:
+    port: 5432
+    password: ""
+    host: ""
+    user: ""
+
+uiStatic:
+  image:
+    name: public.ecr.aws/outerbounds/metaflow_ui
+    pullPolicy: IfNotPresent
+    tag: "v1.3.3"
+
+  podAnnotations: {}
+
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 200m
+    #   memory: 256Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
+
+  env: []
+    # Environment variables for metaflow-ui static deployment. Example config:
+    # - name: var_name
+    #   value: "var_value"
+
+  metaflowUIBackendURL: "http://localhost:8083/api/"
+
+  service:
+    type: ClusterIP
+    port: 3000
+
+  replicaCount: 1
+
+# values common to both the UI static and backend deployments
 imagePullSecrets: []
+podSecurityContext: {}
+  # fsGroup: 2000
+securityContext: {}
+  # capabilities:
+  #   drop:
+  #   - ALL
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+  # runAsUser: 1000
+nodeSelector: {}
+tolerations: []
+affinity: {}
+
+# name overrides
 nameOverride: ""
 fullnameOverride: ""
-
-env: []
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -29,27 +107,6 @@ serviceAccount:
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
-
-podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 8083
-
-serviceStatic:
-  type: ClusterIP
-  port: 3000
 
 ingress:
   enabled: false
@@ -63,41 +120,3 @@ ingress:
         - path: /api
           pathType: ImplementationSpecific
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
-
-envFrom: []
-
-metadatadb:
-  port: 5432
-  password: ""
-  host: ""
-  user: ""
-
-METAFLOW_DATASTORE_SYSROOT_S3: ""
