--- a/.github/workflows/publish_helm_charts.yml
+++ b/.github/workflows/publish_helm_charts.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Run chart-releaser
       uses: helm/chart-releaser-action@v1.6.0
       with:
-        charts_dir: k8s/helm/metaflow
+        charts_dir: charts/metaflow
       env:
         CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
