--- a/.github/workflows/publish_helm_charts.yml
+++ b/.github/workflows/publish_helm_charts.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - publish-helm-chart
 
 jobs:
   release:
@@ -29,6 +30,6 @@ jobs:
     - name: Run chart-releaser
       uses: helm/chart-releaser-action@v1.6.0
       with:
-        charts_dir: charts/metaflow
+        charts_dir: charts/metaflow/charts
       env:
         CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
